# prism

./: .env.example  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.opencode/skills/ci-cd/: SKILL.md
.opencode/skills/code-review/: SKILL.md
.opencode/skills/design-review/: SKILL.md
.opencode/skills/docker/: SKILL.md
.opencode/skills/documentation/: SKILL.md
.opencode/skills/dspy/: SKILL.md
.opencode/skills/git/: SKILL.md
.opencode/skills/langgraph/: SKILL.md
.opencode/skills/least-privilege/: SKILL.md
.opencode/skills/pydantic/: SKILL.md
.opencode/skills/python/: SKILL.md
.opencode/skills/secret-scanning/: SKILL.md
.opencode/skills/skill-security/: SKILL.md
.opencode/skills/tdd/: SKILL.md  deep-modules.md  interface-design.md  mocking.md  tests.md
app/: __init__.py  cli.py  daemon.py  main.py
app/agents/: __init__.py  architecture.py  base.py  documentation.py  maintainability.py  modules.py  performance.py  security.py  signatures.py  testing.py
app/api/: router.py
app/api/endpoints/: health.py
app/bitbucket/: client.py
app/core/: config.py  exceptions.py  models.py  parsing.py
app/eval/: __init__.py  benchmark.py  metrics.py  optimizer.py
app/graph/: builder.py  state.py
app/graph/nodes/: detect_languages.py  detect_node.py  fetch_pr.py  output_node.py  review_node.py  review_pipeline.py  sia_node.py  test_executor.py
app/llm/: client.py  prompts.py
app/observability/: __init__.py  costs.py  latency.py  traces.py
app/rag/: __init__.py  pgvector.py  retriever.py  store.py
app/scm/: __init__.py  client.py  github.py
app/sia/: __init__.py  dataset.py  feedback.py  memory.py
scripts/: init-pgvector.sql
tests/: test_health.py
tests/e2e/: __init__.py
tests/integration/: __init__.py  test_e2e.py  test_main.py
tests/integration/bitbucket/: __init__.py  test_client.py
tests/integration/graph/: __init__.py
tests/integration/nodes/: __init__.py  test_detect_languages.py  test_reviewers.py  test_test_executor.py
tests/mocks/: __init__.py
tests/unit/: test_cli.py  test_daemon.py  test_main.py  test_sia_node.py
tests/unit/agents/: test_modules.py  test_signatures.py
tests/unit/core/: __init__.py  test_config.py  test_models.py
tests/unit/eval/: test_benchmark.py  test_metrics.py  test_optimizer.py
tests/unit/graph/: __init__.py  test_builder.py  test_state.py
tests/unit/llm/: __init__.py  test_client.py  (+1 more)
(+15 files in other folders)
