[project]
name = "prism"
version = "0.2.0"
description = "Prism - DSPy Multi-Agent Code Review Platform"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
dependencies = [
    # Core
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",

    # DSPy
    "dspy>=2.6.0",

    # LangGraph (orchestration)
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # LLM
    "openai>=1.0.0",

    # Storage
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",

    # RAG
    "pgvector>=0.3.0",

    # CLI
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",

    # API / Daemon
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "apscheduler>=3.10.0",

    # Docs review
    "pyspelling",
    "markdown-it-py",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "coverage[toml]>=7.0",
]

[project.scripts]
prism = "app.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]

[tool.ruff.lint.per-file-ignores]
"app/llm/prompts.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=html --cov-report=term"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "app/cli.py", "app/daemon.py", "app/main.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
]
